added tree and person entities
